# artha

./: .antigravityignore  .env.example  .gitignore  .graphifyignore  AGENTS.md  ANTIGRAVITY.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE.md  Makefile  README.md  ROUTER_ARCHITECTURE.md  SPEC.md  compose.dev.yaml  compose.prod.yaml  compose.yaml  docker-compose.yml  run.sh  test_logging.py
.ai/: agents.md  architecture.md  backend.md  coding-standards.md  database.md  frontend.md  root.md  workflows.md
.codex/: hooks.json
.githooks/: pre-push
.impeccable/: design.json
.omo/drafts/: three-db-chat.md  tighten-pyproject.md  unify-llm-consolidate-backend.md
.omo/plans/: decouple-scalability.md  three-db-chat.md  tighten-pyproject.md  unify-llm-consolidate-backend.md
.omo/run-continuation/: ses_0e64e40f0ffevmXU0n6cdzUPtO.json  ses_0eacc9f8dffeaAu1DatRcX6Idk.json
.opencode/: lsp.json
backend/: .dockerignore  AGENTS.md  ANTIGRAVITY.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  pyproject.toml  requirements.txt  test_500.py  test_curl.py  test_db.py  test_embed2.py  test_llm.py  test_llm_for_user.py  test_log.py  test_markitdown.py  test_ollama_embed.py  test_rag.py  test_ssl_err.py  test_stream.py  test_users.py
backend/.ai/: architecture.md  services.md  standards.md
backend/alembic/: env.py
backend/alembic/versions/: 07f642522047_add_document_template.py  125a9d84b09a_bge_m3_1024d_and_image_support.py  20260507_0001_initial_schema.py  20260509_0002_add_project_system_prompt.py  20260512_0003_add_user_settings.py  396d0b3698f9_add_memory_metadata.py  3e34c6eaec5e_add_ingestion_version_to_documents.py  5ec70fa67ca7_add_os_platform_tables.py  6000df845707_add_model_id_index_and_conversation_.py  6bd458504a31_initial_production_grade_schema.py  a1b2c3d4e5f6_add_user_llm_configs.py  d45d34557a99_initial_clean_migration.py  d5ce939ef50c_remove_pgvector_and_chunks_add_minio.py  e2df87c9f208_remove_source_bytes.py  f1d2e3c4b5a6_add_section_heading_and_bm25_index.py
backend/app/: config.py  main.py
backend/app/config/: models.yaml  prompts.yaml
backend/app/models/: __init__.py  agent.py  base.py  conversation.py  document.py  enums.py  user.py
backend/app/models/schemas/: __init__.py  auth.py  chat.py  documents.py  idp.py  platform.py
backend/app/routes/: __init__.py  agents.py  analytics.py  auth.py  chat.py  conversations.py  documents.py  extract.py  health.py  llm_config.py  platform.py  projects.py  templates.py
backend/app/services/: __init__.py  agent_registry.py  arq_worker.py  documents.py  idp_parser.py  ingestion.py  intent_classifier.py  knowledge_registry.py  langfuse_client.py  llm_client.py  llm_factory.py  memory.py  memory_manager.py  memory_worker.py  model_registry.py  observability.py  ollama.py  orchestrator.py  planner.py  prompt_manager.py  rag_engine.py  reranker.py  safety_layer.py  tool_executor.py  tool_registry.py  vision.py  workflow_engine.py
backend/app/services/agents/: __init__.py  builder.py  event_bus.py  ingestion.py  interfaces.py  memory_manager.py  rag.py  redis_event_bus.py  router.py  runtime.py  tool_executor.py
backend/app/services/repositories/: __init__.py  analytics.py  base.py  conversations.py  documents.py  llm_config.py  messages.py  platform.py  projects.py  templates.py  users.py
backend/app/services/tasks/: ingestion_tasks.py
backend/app/utils/: celery_app.py  database.py  dependencies.py  di.py  langfuse_utils.py  logging.py  middleware.py  minio_client.py  qdrant_client.py  redis_client.py  security.py  sse.py
backend/eval/: README.md  __init__.py  arthur_eval_dataset.json  generate_dataset.py  metrics.py  runner.py
backend/scripts/: find_coords.py  test_table.py
backend/src/: main.py
backend/src/agents/: ingestion.py  rag.py
backend/src/audit/: __init__.py
backend/src/auth/: dependencies.py  security.py
backend/src/core/: config.py  database.py  logging.py  middleware.py  rate_limit.py  redis_client.py
backend/src/cost/: __init__.py
backend/src/domain/: __init__.py  models.py
backend/src/repositories/: __init__.py  conversations.py  documents.py  llm_config.py  messages.py  neo4j_graph.py  projects.py  users.py  video.py
backend/src/routers/: __init__.py  analytics.py  auth.py  chat.py  conversations.py  documents.py  extract.py  health.py  llm_config.py  projects.py  video.py
backend/src/schemas/: __init__.py  analytics.py  auth.py  chat.py  documents.py  extract.py  llm_config.py  projects.py  video.py
backend/src/services/: graph_extractor.py  ingestion.py  langfuse_client.py  llm_client.py  llm_factory.py  ollama.py  reranker.py  video_gen.py  vision.py
backend/src/workers/: arq_worker.py  memory_worker.py
backend/tests/: conftest.py  test_auth_api.py  test_auth_schema.py  test_config.py  test_enums.py  test_ingestion.py  test_middleware.py  test_planner.py  test_schemas.py  test_security.py  test_security_extended.py
backend/video-renderer/: package-lock.json  package.json
backend/video-renderer/src/: Root.tsx  ShortVideo.tsx
backend/video-renderer/src/scenes/: CodeScene.tsx  ExplainerScene.tsx
docs/: ROADMAP.md  TROUBLESHOOTING.md  api.md  architecture.md  backend-architecture.md  backend-rag.md  backend-video.md  database.md  frontend-architecture.md  frontend-components.md  frontend-state.md  workflows.md
frontend/: .dockerignore  .prettierignore  .prettierrc  AGENTS.md  ANTIGRAVITY.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  vitest.config.ts
frontend/.ai/: architecture.md  root.md
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: change-password-dialog.tsx  context-preview.tsx  conversations-card.tsx  (+5 more)
graphify-out/: .graphify_ast.json  .graphify_chunk_01.json  .graphify_chunk_03.json  .graphify_detect.json  .graphify_incremental.json  .graphify_python  .graphify_root  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
infra/: init-db.sql
ops/: nginx.conf
scratch/: gen_hash.py
scripts/: test.sh
(+110 files in other folders)
