[project]
name = "agentic-rag-backend"
version = "0.1.0"
description = "Artha backend (FastAPI + LangGraph + Ollama)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "redis>=5.2",
    "arq>=0.26",
    "httpx>=0.27",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-ollama>=0.2",
    "langgraph>=0.2",
    "langfuse>=2.50,<3",
    "python-jose[cryptography]>=3.3",
    "psycopg[binary]>=3.3",
    "structlog>=24.4",
    "sentence-transformers>=3.3",
    "torch>=2.0",
    "alembic>=1.18.4",
    "python-multipart>=0.0.27",
    "langgraph-checkpoint-postgres>=3.0.5",
    "slowapi>=0.1.9",
    "numpy>=2.4.4",
    "tenacity>=8.5",
    "markitdown[all]>=0.1.6",
    "pymupdf>=1.24.1",
    "pdfplumber>=0.11.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.17.0",
    "instructor>=1.3.0",
    "argon2-cffi>=23.1.0",
    "surya-ocr>=0.7.0",
    "litellm>=1.60.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.1",
    "ruff>=0.7",
    "watchfiles>=0.24.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]

name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true


[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ty.rules]
unresolved-import = "ignore"
invalid-method-override = "ignore"
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
not-iterable = "ignore"
invalid-return-type = "ignore"
